--- a/views/trips/new.hbs
+++ b/views/trips/new.hbs
@@ -20,6 +20,7 @@
               </div>
                 <input type="hidden" name="latFrom" id="latFrom" value="{{trip.latFrom}}">
                 <input type="hidden" name="lngFrom" id="lngFrom" value="{{trip.lngFrom}}">
+                <input type="hidden" name="g-imageFrom" id="g-imageFrom" value="{{currentUser.image}}">
 
               <div class="row my-3">
                 <div class="col-12">
@@ -36,6 +37,7 @@
               </div>
               <input type="hidden" name="latTo" id="latTo" value="{{trip.latTo}}">
               <input type="hidden" name="lngTo" id="lngTo" value="{{trip.lngTo}}">
+              <input type="hidden" name="g-imageTo" id="g-imageTo" value="{{currentUser.image}}">
 
                <div class="row my-3">
                 <div class="col-12">
