--- a/views/trips/book.hbs
+++ b/views/trips/book.hbs
@@ -12,5 +12,6 @@
 
 
 <form action="/trips/{{trip.id}}/book" method="POST">
-  <button type="submit" class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal">Pay {{trip.price}}.00€</button>
+  <button type="submit" class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal">Pay
+    {{trip.price}}.00€</button>
 </form>
