--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -6,207 +6,132 @@
   <div class="card-body">
     <div class="d-flex flex-row">
       <div class="p-2">
-        <svg
-          viewBox="0 0 24 24"
-          xmlns="http://www.w3.org/2000/svg"
-          class="kirk-icon sc-ksBlkl Jvfzv"
-          width="24"
-          height="24"
-          aria-hidden="true"
-        ><path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="24"
+          height="24" aria-hidden="true">
+          <path fill-rule="evenodd" clip-rule="evenodd"
             d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM12 17C14.7614 17 17 14.7614 17 12C17 9.23858 14.7614 7 12 7C9.23858 7 7 9.23858 7 12C7 14.7614 9.23858 17 12 17Z"
-            fill="#708C91"
-          ></path></svg>
+            fill="#708C91"></path>
+        </svg>
       </div>
 
-  <form action="/trips" method="get">
+      <form action="/trips" method="get">
         <div class="input-group mb-1">
-            <input type="from" value="{{query.from}}" name="from" class="form-control fs-5 g-places-finder text-secondary border-0 {{#if errors.from}}is-invalid{{/if}}"
-              placeholder="Leaving from...">
-              {{#if errors.from}}<div class="invalid-feedback">{{errors.from}}</div>{{/if}}
+          <input type="from" value="{{query.from}}" name="from"
+            class="form-control fs-5 g-places-finder text-secondary border-0 {{#if errors.from}}is-invalid{{/if}}"
+            placeholder="Leaving from...">
+          {{#if errors.from}}<div class="invalid-feedback">{{errors.from}}</div>{{/if}}
         </div>
-          <input type="hidden" name="latFrom" value="{{query.latFrom}}">
-          <input type="hidden" name="lngFrom" value="{{query.lngFrom}}">
+        <input type="hidden" name="latFrom" value="{{query.latFrom}}">
+        <input type="hidden" name="lngFrom" value="{{query.lngFrom}}">
     </div>
     <div class="border-bottom"></div>
     <div class="mt-2 d-flex flex-row">
       <div class="p-2">
-        <svg
-          viewBox="0 0 24 24"
-          xmlns="http://www.w3.org/2000/svg"
-          class="kirk-icon sc-ksBlkl Jvfzv"
-          width="24"
-          height="24"
-          aria-hidden="true"
-        ><path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="24"
+          height="24" aria-hidden="true">
+          <path fill-rule="evenodd" clip-rule="evenodd"
             d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM12 17C14.7614 17 17 14.7614 17 12C17 9.23858 14.7614 7 12 7C9.23858 7 7 9.23858 7 12C7 14.7614 9.23858 17 12 17Z"
-            fill="#708C91"
-          ></path></svg>
+            fill="#708C91"></path>
+        </svg>
       </div>
-    
-    <div class="input-group mb-3">
-        <input type="to" value="{{trip.to}}" name="to" class="form-control fs-5 g-places-finder text-secondary border-0 {{#if errors.to}}is-invalid{{/if}}"
+
+      <div class="input-group mb-3">
+        <input type="to" value="{{trip.to}}" name="to"
+          class="form-control fs-5 g-places-finder text-secondary border-0 {{#if errors.to}}is-invalid{{/if}}"
           placeholder="Going to...">
-          {{#if errors.to}}<div class="invalid-feedback">{{errors.to}}</div>{{/if}}
+        {{#if errors.to}}<div class="invalid-feedback">{{errors.to}}</div>{{/if}}
+      </div>
+      <input type="hidden" name="latTo" value="{{query.latTo}}">
+      <input type="hidden" name="lngTo" value="{{query.lngTo}}">
     </div>
-    <input type="hidden" name="latTo" value="{{query.latTo}}">
-    <input type="hidden" name="lngTo" value="{{query.lngTo}}">
-    </div>
-    
+
     <div class="border-bottom"></div>
     <div class="d-flex mt-1 mb-1">
       <div class="p-2 flex-grow-1">
         <div class="d-flex flex-grow">
-          <svg
-            viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg"
-            class="kirk-icon sc-ksBlkl Jvfzv mt-2"
-            width="24"
-            height="24"
-            aria-hidden="true"
-          ><g fill="none" fill-rule="evenodd"><rect
-                x="3.5"
-                y="3.5"
-                width="17"
-                height="17"
-                rx="3.5"
-                stroke="#708C91"
-              ></rect><path
-                d="M3.5 7C3.5 5.067 5.067 3.5 7 3.5H17C18.933 3.5 20.5 5.067 20.5 7V8.5H3.5V7Z"
-                stroke="#708C91"
-              ></path><rect
-                x="6"
-                y="11"
-                width="2"
-                height="2"
-                rx="1"
-                fill="#708C91"
-              ></rect><rect
-                x="6"
-                y="15"
-                width="2"
-                height="2"
-                rx="1"
-                fill="#708C91"
-              ></rect><rect
-                x="11"
-                y="11"
-                width="2"
-                height="2"
-                rx="1"
-                fill="#708C91"
-              ></rect><rect
-                x="11"
-                y="15"
-                width="2"
-                height="2"
-                rx="1"
-                fill="#708C91"
-              ></rect><rect
-                x="16"
-                y="11"
-                width="2"
-                height="2"
-                rx="1"
-                fill="#708C91"
-              ></rect></g></svg>
-            <input type="date" value="{{query.date}}" name="date" class="form-control text-secondary border-0 {{#if errors.date}}is-invalid{{/if}}"
-              placeholder="Today">
-              {{#if errors.date}}<div class="invalid-feedback">{{errors.date}}</div>{{/if}}
+          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv mt-2" width="24"
+            height="24" aria-hidden="true">
+            <g fill="none" fill-rule="evenodd">
+              <rect x="3.5" y="3.5" width="17" height="17" rx="3.5" stroke="#708C91"></rect>
+              <path d="M3.5 7C3.5 5.067 5.067 3.5 7 3.5H17C18.933 3.5 20.5 5.067 20.5 7V8.5H3.5V7Z" stroke="#708C91">
+              </path>
+              <rect x="6" y="11" width="2" height="2" rx="1" fill="#708C91"></rect>
+              <rect x="6" y="15" width="2" height="2" rx="1" fill="#708C91"></rect>
+              <rect x="11" y="11" width="2" height="2" rx="1" fill="#708C91"></rect>
+              <rect x="11" y="15" width="2" height="2" rx="1" fill="#708C91"></rect>
+              <rect x="16" y="11" width="2" height="2" rx="1" fill="#708C91"></rect>
+            </g>
+          </svg>
+          <input type="date" value="{{query.date}}" name="date"
+            class="form-control text-secondary border-0 {{#if errors.date}}is-invalid{{/if}}" placeholder="Today">
+          {{#if errors.date}}<div class="invalid-feedback">{{errors.date}}</div>{{/if}}
         </div>
       </div>
       <div class="p-2 flex-grow-1">
         <div class="mb-2 d-flex flex-grow border-start">
-          <svg
-            viewBox="0 0 19 20"
-            xmlns="http://www.w3.org/2000/svg"
-            class="kirk-icon homeSeats sc-ksBlkl Jvfzv mt-2"
-            width="18"
-            height="18"
-            aria-hidden="true"
-            ><g fill="none"><path
-            d="M9.583 9.167a3.75 3.75 0 0 0 3.75-3.75v-.834a3.75 3.75 0 0 0-7.5 0v.834a3.75 3.75 0 0 0 3.75 3.75zm0 .833A4.584 4.584 0 0 1 5 5.417v-.834a4.584 4.584 0 0 1 9.167 0v.834A4.584 4.584 0 0 1 9.583 10zM18.333 17.007v1.743c0 .23-.186.417-.416.417H1.25a.417.417 0 0 1-.417-.417v-1.743a3.742 3.742 0 0 1 2.752-3.616c2.033-.554 4.08-.891 5.998-.891 1.92 0 3.966.337 5.998.891a3.742 3.742 0 0 1 2.752 3.616zm-.833 0a2.908 2.908 0 0 0-2.138-2.812c-1.967-.537-3.944-.862-5.779-.862-1.834 0-3.811.325-5.779.862a2.908 2.908 0 0 0-2.137 2.812v1.326H17.5v-1.326z"
-            fill="#708C91"
-            ></path></g></svg>
-            <input type="number" value="{{query.seats}}" name="seats" class="form-control text-secondary border-0 {{#if errors.seats}}is-invalid{{/if}}"
-              placeholder="Seats">
-              {{#if errors.seats}}<div class="invalid-feedback">{{errors.seats}}</div>{{/if}}
+          <svg viewBox="0 0 19 20" xmlns="http://www.w3.org/2000/svg" class="kirk-icon homeSeats sc-ksBlkl Jvfzv mt-2"
+            width="18" height="18" aria-hidden="true">
+            <g fill="none">
+              <path
+                d="M9.583 9.167a3.75 3.75 0 0 0 3.75-3.75v-.834a3.75 3.75 0 0 0-7.5 0v.834a3.75 3.75 0 0 0 3.75 3.75zm0 .833A4.584 4.584 0 0 1 5 5.417v-.834a4.584 4.584 0 0 1 9.167 0v.834A4.584 4.584 0 0 1 9.583 10zM18.333 17.007v1.743c0 .23-.186.417-.416.417H1.25a.417.417 0 0 1-.417-.417v-1.743a3.742 3.742 0 0 1 2.752-3.616c2.033-.554 4.08-.891 5.998-.891 1.92 0 3.966.337 5.998.891a3.742 3.742 0 0 1 2.752 3.616zm-.833 0a2.908 2.908 0 0 0-2.138-2.812c-1.967-.537-3.944-.862-5.779-.862-1.834 0-3.811.325-5.779.862a2.908 2.908 0 0 0-2.137 2.812v1.326H17.5v-1.326z"
+                fill="#708C91"></path>
+            </g>
+          </svg>
+          <input type="number" value="{{query.seats}}" name="seats"
+            class="form-control text-secondary border-0 {{#if errors.seats}}is-invalid{{/if}}" placeholder="Seats">
+          {{#if errors.seats}}<div class="invalid-feedback">{{errors.seats}}</div>{{/if}}
         </div>
       </div>
     </div>
   </div>
-      <div>
-        <button
-          type="submit"
-          class="search btn rounded-4 rounded-top-0 w-100"
-        >Search</button>
-      </div>
+  <div>
+    <button type="submit" class="search btn rounded-4 rounded-top-0 w-100">Search</button>
   </div>
-  </form>
+</div>
+</form>
 
-  <div class="card mx-auto border-0 mt-5" style="width: 90%;">
-    <div class="mb-3">
-    <svg
-      viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg"
-      class="kirk-icon sc-ksBlkl Jvfzv"
-      width="40"
-      height="40"
-      aria-hidden="true"
-    ><g
-        fill="none"
-        stroke="#708C91"
-        stroke-width="1"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-      ><path
-          d="M2.43 5.04v3.48c0 1.44 2.34 2.61 5.22 2.61s5.22-1.17 5.22-2.6V5.03"
-        ></path><path
-          d="M2.43 8.52V12c0 1.44 2.34 2.6 5.22 2.6a8.7 8.7 0 0 0 3.48-.66"
-        ></path><path
-          d="M2.43 12v3.48c0 1.44 2.34 2.6 5.22 2.6a8.7 8.7 0 0 0 3.48-.66"
-        ></path><ellipse cx="7.65" cy="5.04" rx="5.22" ry="2.61"></ellipse><path
-          d="M11.13 12v3.48c0 1.44 2.34 2.6 5.22 2.6s5.22-1.16 5.22-2.6V12"
-        ></path><path
-          d="M11.13 15.48v3.48c0 1.44 2.34 2.6 5.22 2.6s5.22-1.16 5.22-2.6v-3.48"
-        ></path><ellipse
-          cx="16.35"
-          cy="12"
-          rx="5.22"
-          ry="2.61"
-        ></ellipse></g></svg>
+<div class="card mx-auto border-0 mt-5" style="width: 90%;">
+  <div class="mb-3">
+    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="40" height="40"
+      aria-hidden="true">
+      <g fill="none" stroke="#708C91" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M2.43 5.04v3.48c0 1.44 2.34 2.61 5.22 2.61s5.22-1.17 5.22-2.6V5.03"></path>
+        <path d="M2.43 8.52V12c0 1.44 2.34 2.6 5.22 2.6a8.7 8.7 0 0 0 3.48-.66"></path>
+        <path d="M2.43 12v3.48c0 1.44 2.34 2.6 5.22 2.6a8.7 8.7 0 0 0 3.48-.66"></path>
+        <ellipse cx="7.65" cy="5.04" rx="5.22" ry="2.61"></ellipse>
+        <path d="M11.13 12v3.48c0 1.44 2.34 2.6 5.22 2.6s5.22-1.16 5.22-2.6V12"></path>
+        <path d="M11.13 15.48v3.48c0 1.44 2.34 2.6 5.22 2.6s5.22-1.16 5.22-2.6v-3.48"></path>
+        <ellipse cx="16.35" cy="12" rx="5.22" ry="2.61"></ellipse>
+      </g>
+    </svg>
   </div>
   <p class="fw-bold mb-0">Your pick of rides at low prices</p>
   <p class="fs-8 text-secondary">No matter where you’re going, by bus or
     carpool, find the perfect ride from our wide range of destinations and
     routes at low prices.</p>
-  </div>
+</div>
 <div class="card mx-auto border-0" style="width: 90%;">
   <div class="mb-3">
-    <svg
-      viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg"
-      class="kirk-icon sc-ksBlkl Jvfzv"
-      width="40"
-      height="40"
-      aria-hidden="true"
-    ><g><path
-          d="M19.33,8.5c0-0.276-0.225-0.5-0.5-0.5h-3.855c-0.275,0-0.5,0.224-0.5,0.5s0.225,0.5,0.5,0.5h3.855 C19.105,9,19.33,8.776,19.33,8.5z"
-        ></path><path
+    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="40" height="40"
+      aria-hidden="true">
+      <g>
+        <path
+          d="M19.33,8.5c0-0.276-0.225-0.5-0.5-0.5h-3.855c-0.275,0-0.5,0.224-0.5,0.5s0.225,0.5,0.5,0.5h3.855 C19.105,9,19.33,8.776,19.33,8.5z">
+        </path>
+        <path
           d="M9.906,8.492V8.133c0-0.994-0.798-1.799-1.781-1.799S6.344,7.139,6.344,8.133v0.359 c0,0.994,0.798,1.799,1.781,1.799S9.906,9.486,9.906,8.492z"
-          fill="#708C91"
-        ></path><path
+          fill="#708C91"></path>
+        <path
           d="M4.167,13.422v0.528c0,0.165,0.134,0.3,0.3,0.3h7.316c0.166,0,0.3-0.135,0.3-0.3v-0.528 c0-0.713-0.474-1.339-1.162-1.526c-0.75-0.204-1.773-0.417-2.797-0.417s-2.047,0.213-2.797,0.417 C4.641,12.083,4.167,12.709,4.167,13.422z"
-          fill="#708C91"
-        ></path><path
-          d="M12,18H1.982V1h2.904C5.11,2.139,6.086,3,7.265,3c1.178,0,2.154-0.861,2.379-2h4.88 c0.225,1.139,1.201,2,2.379,2s2.154-0.861,2.379-2h2.903v9c0,0.276,0.224,0.5,0.5,0.5s0.5-0.224,0.5-0.5V0.5 c0-0.276-0.224-0.5-0.5-0.5H18.83c-0.276,0-0.5,0.224-0.5,0.5c0,0.833-0.643,1.5-1.428,1.5s-1.428-0.667-1.428-1.5 c0-0.276-0.224-0.5-0.5-0.5H9.192c-0.276,0-0.5,0.224-0.5,0.5c0,0.833-0.643,1.5-1.427,1.5S5.837,1.333,5.837,0.5 c0-0.276-0.224-0.5-0.5-0.5H1.482c-0.276,0-0.5,0.224-0.5,0.5v18c0,0.276,0.224,0.5,0.5,0.5H12c0.276,0,0.5-0.224,0.5-0.5 S12.276,18,12,18z"
-        ></path><path
-          d="M25.354,13.646c-0.195-0.195-0.512-0.195-0.707,0L19,19.293l-2.646-2.646c-0.195-0.195-0.512-0.195-0.707,0 s-0.195,0.512,0,0.707l3,3c0.195,0.195,0.512,0.195,0.707,0l6-6C25.549,14.158,25.549,13.842,25.354,13.646z"
-        ></path></g></svg>
+          fill="#708C91"></path>
+        <path
+          d="M12,18H1.982V1h2.904C5.11,2.139,6.086,3,7.265,3c1.178,0,2.154-0.861,2.379-2h4.88 c0.225,1.139,1.201,2,2.379,2s2.154-0.861,2.379-2h2.903v9c0,0.276,0.224,0.5,0.5,0.5s0.5-0.224,0.5-0.5V0.5 c0-0.276-0.224-0.5-0.5-0.5H18.83c-0.276,0-0.5,0.224-0.5,0.5c0,0.833-0.643,1.5-1.428,1.5s-1.428-0.667-1.428-1.5 c0-0.276-0.224-0.5-0.5-0.5H9.192c-0.276,0-0.5,0.224-0.5,0.5c0,0.833-0.643,1.5-1.427,1.5S5.837,1.333,5.837,0.5 c0-0.276-0.224-0.5-0.5-0.5H1.482c-0.276,0-0.5,0.224-0.5,0.5v18c0,0.276,0.224,0.5,0.5,0.5H12c0.276,0,0.5-0.224,0.5-0.5 S12.276,18,12,18z">
+        </path>
+        <path
+          d="M25.354,13.646c-0.195-0.195-0.512-0.195-0.707,0L19,19.293l-2.646-2.646c-0.195-0.195-0.512-0.195-0.707,0 s-0.195,0.512,0,0.707l3,3c0.195,0.195,0.512,0.195,0.707,0l6-6C25.549,14.158,25.549,13.842,25.354,13.646z">
+        </path>
+      </g>
+    </svg>
   </div>
   <p class="fw-bold mb-0">Trust who you travel with</p>
   <p class="fs-8 text-secondary">We take the time to get to know each of our
@@ -216,22 +141,11 @@
 </div>
 <div class="card mx-auto border-0 mt-2 pb-5" style="width: 90%;">
   <div class="mb-3">
-    <svg
-      viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg"
-      class="kirk-icon sc-ksBlkl Jvfzv"
-      width="40"
-      height="40"
-      aria-hidden="true"
-    ><path
-        fill="none"
-        stroke="#708C91"
-        stroke-width="1"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-miterlimit="10"
-        d="M15.5 1.5h-7l-3 11h6l-2 8 10-12h-6z"
-      ></path></svg>
+    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="40" height="40"
+      aria-hidden="true">
+      <path fill="none" stroke="#708C91" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
+        stroke-miterlimit="10" d="M15.5 1.5h-7l-3 11h6l-2 8 10-12h-6z"></path>
+    </svg>
   </div>
   <p class="fw-bold mb-0">Scroll, click, tap and go!</p>
   <p class="fs-8 text-secondary">Booking a ride has never been easier! Thanks to
@@ -239,13 +153,8 @@
     in just minutes.</p>
 </div>
 <div class="help text-center">
-  <img
-    class="run w-100"
-    src="https://cdn.blablacar.com/kairos/assets/images/scamDetective-653544b71d88f51797db..svg"
-    alt="help"
-    width="525px"
-    height="302px"
-  />
+  <img class="run w-100" src="https://cdn.blablacar.com/kairos/assets/images/scamDetective-653544b71d88f51797db..svg"
+    alt="help" width="525px" height="302px" />
   <h1 class="text-white mb-3 fw-normal mt-4">Help us keep you safe from scams</h1>
 
   <p class="text-white p-3 fw-normal">At BlaBlaCar, we're working hard to make
@@ -253,28 +162,19 @@
     to know exactly how to avoid and report them. Follow our tips to help us
     keep you safe.</p>
 
-  <button
-    class="learn btn btn-outline-primary rounded-pill bg-light text-blue mb-5 border-0 fw-normal"
-    href="#"
-  >Learn More</button>
+  <button class="learn btn btn-outline-primary rounded-pill bg-light text-blue mb-5 border-0 fw-normal" href="#">Learn
+    More</button>
 </div>
 <div class="car text-center">
-  <img
-    class="run w-100"
-    src="https://cdn.blablacar.com/kairos/assets/images/driver_masks-8bad4a96a1d6cbab177e..svg"
-    alt="help"
-    width="525px"
-    height="302px"
-  />
+  <img class="run w-100" src="https://cdn.blablacar.com/kairos/assets/images/driver_masks-8bad4a96a1d6cbab177e..svg"
+    alt="help" width="525px" height="302px" />
   <h1 class="text-black mb-3 fw-normal mt-4">Where do you want to drive to?</h1>
 
   <p class="p-3 fw-normal fs-8 text-secondary">Let's make this your least expensive
     journey ever.</p>
 
-  <a
-    class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal"
-    href="/trips/new"
-  >Publish a ride</a>
+  <a class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal" href="/trips/new">Publish a
+    ride</a>
 </div>
 <div class="where mt-20">
   <h2 class="text-white fs-25">Where do you want a ride to?</h2>
