--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,20 +1,80 @@
 <div class="navbar-custom nav nav-pills d-flex justify-content-between bg-white fixed-top">
-  <li class="nav-item dropdown" >
-    <a
-      class="nav-link dropdown-toggle" 
-      data-bs-toggle="dropdown"
-      href="#"
-      role="button"
-      aria-expanded="false"
-    >
-    <img class="rounded-circle mt-1" src="{{#if currentUser.image}} {{currentUser.image}} {{else}}https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg{{/if}}" alt="user" width="28px" height="28px"></a>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+      <img class="rounded-circle mt-1"
+        src="{{#if currentUser.image}} {{currentUser.image}} {{else}}https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg{{/if}}"
+        alt="user" width="28px" height="28px"></a>
     <ul class="dropdown-menu mt-1">
       {{#if currentUser.user}}
-      <li><a class="dropdown-item border-bottom" href="/trips/new"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="svg kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true"><path stroke-width="0" fill="#708C91" fill-rule="evenodd" d="M1.14 11.5a10.36 10.36 0 1120.72 0 10.36 10.36 0 01-20.72 0zM11.5 0a11.5 11.5 0 100 23 11.5 11.5 0 000-23zm.57 6.53a.57.57 0 00-1.14 0v4.4h-4.4a.57.57 0 100 1.14h4.4v4.4a.57.57 0 101.14 0v-4.4h4.4a.57.57 0 000-1.14h-4.4z"></path></svg>Offer a ride<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true"><polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline></svg></a></li>
-      <li><a class="dropdown-item border-bottom" href="/profile/rides"><svg viewBox="0 0 24 20" xmlns="http://www.w3.org/2000/svg" class="svg kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true"><g fill="none" fill-rule="evenodd" stroke="#708C91" stroke-width="1"><path fill="none" d="M15.744 7.145c.203-1.217.39-2.31.56-3.275.044-.246.15-.83.322-1.752a.5.5 0 0 0-.405-.584l-2.64-.466a.5.5 0 0 0-.546.295c-1.066 2.48-1.794 4.855-2.184 7.126-.492 2.863-.47 5.946 1.047 8.116.326.466.721.89 1.195 1.26 1.38 1.08 3.05 1.503 4.677 1.227a6.034 6.034 0 0 0 3.658-2.117 6.043 6.043 0 0 0 1.303-4.87 6.04 6.04 0 0 0-2.564-3.992 6.036 6.036 0 0 0-4.423-.968z"></path><path fill="none" d="M6.179 7.145c.19-1.143.377-2.235.56-3.275l.323-1.753a.5.5 0 0 0-.405-.583l-2.641-.466a.5.5 0 0 0-.547.295C2.404 3.843 1.676 6.218 1.286 8.49c-.492 2.863-.47 5.946 1.047 8.116.326.466.721.89 1.195 1.26 1.38 1.08 3.05 1.503 4.677 1.227a6.034 6.034 0 0 0 3.658-2.117 6.043 6.043 0 0 0 1.302-4.87 6.04 6.04 0 0 0-2.563-3.992 6.036 6.036 0 0 0-4.423-.968z"></path><path fill="none" d="M12 16.5a5.995 5.995 0 0 1-.123-.17c-1.516-2.17-1.54-5.252-1.047-8.115l.03-.174a6.035 6.035 0 0 1 2.284 3.79 6.039 6.039 0 0 1-1.144 4.67z"></path></g></svg>Your rides<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true"><polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline></svg></a></li>
-      <li><a class="dropdown-item border-bottom" href="/inbox"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="svg kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true"><path d="M21.951,10.281C21.98,10.023,22,9.764,22,9.5C22,4.813,17.29,1,11.5,1C5.71,1,1,4.813,1,9.5c0,1.801,0.691,3.52,2,4.979 V19.5c0,0.173,0.09,0.334,0.237,0.426C3.317,19.975,3.409,20,3.5,20c0.077,0,0.153-0.018,0.224-0.053l4.431-2.215 C9.667,19.752,12.424,21,15.5,21c0.547,0,1.097-0.042,1.636-0.123l4.141,2.07C21.347,22.982,21.424,23,21.5,23 c0.092,0,0.183-0.025,0.263-0.074C21.91,22.834,22,22.673,22,22.5v-3.814c1.292-1.173,2-2.651,2-4.186 C24,12.946,23.27,11.461,21.951,10.281z M3.865,13.943C2.645,12.641,2,11.104,2,9.5C2,5.364,6.262,2,11.5,2S21,5.364,21,9.5 S16.738,17,11.5,17c-1.023,0-2.045-0.135-3.038-0.399c-0.118-0.029-0.244-0.019-0.353,0.036L4,18.691v-4.406 C4,14.158,3.952,14.036,3.865,13.943z M21.176,18.079C21.064,18.175,21,18.313,21,18.46v3.23l-3.561-1.78 c-0.094-0.048-0.203-0.064-0.307-0.046C16.597,19.954,16.047,20,15.5,20c-2.334,0-4.511-0.826-5.917-2.162 C10.219,17.935,10.858,18,11.5,18c4.962,0,9.12-2.804,10.212-6.554C22.543,12.351,23,13.411,23,14.5 C23,15.805,22.353,17.076,21.176,18.079z"></path></svg>Inbox<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true"><polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline></svg></a></li>
-      <li><a class="dropdown-item border-bottom" href="/profile"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="svg kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true"><g fill="none" stroke="#708C91" stroke-width="1"><circle cx="12" cy="12" r="10"></circle><path d="M6.67 20.5A5 5 0 0 1 11 18h2a5 5 0 0 1 4.34 2.52"></path><rect width="7" height="9" x="8.5" y="6.5" rx="3.5"></rect></g></svg>Profile<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true"><polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline></svg></a></li>
-      <li><a class="dropdown-item" href="/logout"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="svg kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true"><g><path d="M16.854,8.146c-0.195-0.195-0.512-0.195-0.707,0L12.5,11.793L8.854,8.146c-0.195-0.195-0.512-0.195-0.707,0 s-0.195,0.512,0,0.707l3.646,3.646l-3.646,3.646c-0.195,0.195-0.195,0.512,0,0.707s0.512,0.195,0.707,0l3.646-3.646l3.646,3.646 C16.244,16.951,16.372,17,16.5,17s0.256-0.049,0.354-0.146c0.195-0.195,0.195-0.512,0-0.707L13.207,12.5l3.646-3.646 C17.049,8.658,17.049,8.342,16.854,8.146z"></path><path d="M12.5,1C6.159,1,1,6.159,1,12.5C1,18.841,6.159,24,12.5,24C18.841,24,24,18.841,24,12.5 C24,6.159,18.841,1,12.5,1z M12.5,23C6.71,23,2,18.29,2,12.5C2,6.71,6.71,2,12.5,2C18.29,2,23,6.71,23,12.5 C23,18.29,18.29,23,12.5,23z"></path></g></svg>Log out<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true"><polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline></svg></a></li>
+      <li><a class="dropdown-item border-bottom" href="/trips/new"><svg viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg" class="svg kirk-icon sc-ksBlkl Jvfzv" width="24" height="24"
+            aria-hidden="true">
+            <path stroke-width="0" fill="#708C91" fill-rule="evenodd"
+              d="M1.14 11.5a10.36 10.36 0 1120.72 0 10.36 10.36 0 01-20.72 0zM11.5 0a11.5 11.5 0 100 23 11.5 11.5 0 000-23zm.57 6.53a.57.57 0 00-1.14 0v4.4h-4.4a.57.57 0 100 1.14h4.4v4.4a.57.57 0 101.14 0v-4.4h4.4a.57.57 0 000-1.14h-4.4z">
+            </path>
+          </svg>Offer a ride<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+            class="kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true">
+            <polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline>
+          </svg></a></li>
+      <li><a class="dropdown-item border-bottom" href="/profile/rides"><svg viewBox="0 0 24 20"
+            xmlns="http://www.w3.org/2000/svg" class="svg kirk-icon sc-ksBlkl Jvfzv" width="24" height="24"
+            aria-hidden="true">
+            <g fill="none" fill-rule="evenodd" stroke="#708C91" stroke-width="1">
+              <path fill="none"
+                d="M15.744 7.145c.203-1.217.39-2.31.56-3.275.044-.246.15-.83.322-1.752a.5.5 0 0 0-.405-.584l-2.64-.466a.5.5 0 0 0-.546.295c-1.066 2.48-1.794 4.855-2.184 7.126-.492 2.863-.47 5.946 1.047 8.116.326.466.721.89 1.195 1.26 1.38 1.08 3.05 1.503 4.677 1.227a6.034 6.034 0 0 0 3.658-2.117 6.043 6.043 0 0 0 1.303-4.87 6.04 6.04 0 0 0-2.564-3.992 6.036 6.036 0 0 0-4.423-.968z">
+              </path>
+              <path fill="none"
+                d="M6.179 7.145c.19-1.143.377-2.235.56-3.275l.323-1.753a.5.5 0 0 0-.405-.583l-2.641-.466a.5.5 0 0 0-.547.295C2.404 3.843 1.676 6.218 1.286 8.49c-.492 2.863-.47 5.946 1.047 8.116.326.466.721.89 1.195 1.26 1.38 1.08 3.05 1.503 4.677 1.227a6.034 6.034 0 0 0 3.658-2.117 6.043 6.043 0 0 0 1.302-4.87 6.04 6.04 0 0 0-2.563-3.992 6.036 6.036 0 0 0-4.423-.968z">
+              </path>
+              <path fill="none"
+                d="M12 16.5a5.995 5.995 0 0 1-.123-.17c-1.516-2.17-1.54-5.252-1.047-8.115l.03-.174a6.035 6.035 0 0 1 2.284 3.79 6.039 6.039 0 0 1-1.144 4.67z">
+              </path>
+            </g>
+          </svg>Your rides<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv"
+            width="24" height="24" aria-hidden="true">
+            <polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline>
+          </svg></a></li>
+      <li><a class="dropdown-item border-bottom" href="/inbox"><svg viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg" class="svg kirk-icon sc-ksBlkl Jvfzv" width="24" height="24"
+            aria-hidden="true">
+            <path
+              d="M21.951,10.281C21.98,10.023,22,9.764,22,9.5C22,4.813,17.29,1,11.5,1C5.71,1,1,4.813,1,9.5c0,1.801,0.691,3.52,2,4.979 V19.5c0,0.173,0.09,0.334,0.237,0.426C3.317,19.975,3.409,20,3.5,20c0.077,0,0.153-0.018,0.224-0.053l4.431-2.215 C9.667,19.752,12.424,21,15.5,21c0.547,0,1.097-0.042,1.636-0.123l4.141,2.07C21.347,22.982,21.424,23,21.5,23 c0.092,0,0.183-0.025,0.263-0.074C21.91,22.834,22,22.673,22,22.5v-3.814c1.292-1.173,2-2.651,2-4.186 C24,12.946,23.27,11.461,21.951,10.281z M3.865,13.943C2.645,12.641,2,11.104,2,9.5C2,5.364,6.262,2,11.5,2S21,5.364,21,9.5 S16.738,17,11.5,17c-1.023,0-2.045-0.135-3.038-0.399c-0.118-0.029-0.244-0.019-0.353,0.036L4,18.691v-4.406 C4,14.158,3.952,14.036,3.865,13.943z M21.176,18.079C21.064,18.175,21,18.313,21,18.46v3.23l-3.561-1.78 c-0.094-0.048-0.203-0.064-0.307-0.046C16.597,19.954,16.047,20,15.5,20c-2.334,0-4.511-0.826-5.917-2.162 C10.219,17.935,10.858,18,11.5,18c4.962,0,9.12-2.804,10.212-6.554C22.543,12.351,23,13.411,23,14.5 C23,15.805,22.353,17.076,21.176,18.079z">
+            </path>
+          </svg>Inbox<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv"
+            width="24" height="24" aria-hidden="true">
+            <polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline>
+          </svg></a></li>
+      <li><a class="dropdown-item border-bottom" href="/profile"><svg viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg" class="svg kirk-icon sc-ksBlkl Jvfzv" width="24" height="24"
+            aria-hidden="true">
+            <g fill="none" stroke="#708C91" stroke-width="1">
+              <circle cx="12" cy="12" r="10"></circle>
+              <path d="M6.67 20.5A5 5 0 0 1 11 18h2a5 5 0 0 1 4.34 2.52"></path>
+              <rect width="7" height="9" x="8.5" y="6.5" rx="3.5"></rect>
+            </g>
+          </svg>Profile<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv"
+            width="24" height="24" aria-hidden="true">
+            <polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline>
+          </svg></a></li>
+      <li><a class="dropdown-item" href="/logout"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+            class="svg kirk-icon sc-ksBlkl Jvfzv" width="24" height="24" aria-hidden="true">
+            <g>
+              <path
+                d="M16.854,8.146c-0.195-0.195-0.512-0.195-0.707,0L12.5,11.793L8.854,8.146c-0.195-0.195-0.512-0.195-0.707,0 s-0.195,0.512,0,0.707l3.646,3.646l-3.646,3.646c-0.195,0.195-0.195,0.512,0,0.707s0.512,0.195,0.707,0l3.646-3.646l3.646,3.646 C16.244,16.951,16.372,17,16.5,17s0.256-0.049,0.354-0.146c0.195-0.195,0.195-0.512,0-0.707L13.207,12.5l3.646-3.646 C17.049,8.658,17.049,8.342,16.854,8.146z">
+              </path>
+              <path
+                d="M12.5,1C6.159,1,1,6.159,1,12.5C1,18.841,6.159,24,12.5,24C18.841,24,24,18.841,24,12.5 C24,6.159,18.841,1,12.5,1z M12.5,23C6.71,23,2,18.29,2,12.5C2,6.71,6.71,2,12.5,2C18.29,2,23,6.71,23,12.5 C23,18.29,18.29,23,12.5,23z">
+              </path>
+            </g>
+          </svg>Log out<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv"
+            width="24" height="24" aria-hidden="true">
+            <polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline>
+          </svg></a></li>
       {{else}}
       <li><a class="dropdown-item" href="/login">Log In</a></li>
       <li><a class="dropdown-item" href="/users/new">Sign up</a></li>
@@ -23,25 +83,36 @@
   </li>
   <div class="nav-item mt-1">
     <a class="nav-link icon" href="/">
-    <svg viewBox="0 0 1199.96 1014.39" width="33"><path
-      fill="#054752"
-      d="M1195.16 619.8c-31.2-184-205.8-308-390-276.8l54.4-308.3L662.96 0c-17 37-91 206-127 397 73.3 50 127 128.5 143 223 17.2 100.7-12.3 198.5-72.6 271.7 14.8 18 31.7 34.7 51 49.7 77 60.3 170.2 83.8 261 68.4 184-31.3 308-206 276.8-390z"
-    ></path><path
-      fill="#2dbeff"
-      d="M531.96 418l4-21c-69.8-47.6-157.2-69.3-247-54l54.4-308.4L146.66 0c-17.5 38.4-96.5 218.6-130.7 418-27.5 159.8-26.2 332 58.5 453 18.2 26 40.2 49.7 66.7 70.4 77 60.3 170.2 83.8 261 68.4 83.4-14 154.4-57.7 204.3-118.2-5.5-6.7-10.8-13.6-15.7-20.7-85-121.2-86-293.3-58.7-453z"
-    ></path><path
-      fill="#9ef769"
-      d="M678.96 619.8c-16-94.4-69.7-173-143-223l-4 21c-27.4 160-26 332 58.6 453 5 7.2 10.2 14 15.7 20.8 60.3-73.2 89.8-171 72.7-271.8z"
-    ></path></svg>
+      <svg viewBox="0 0 1199.96 1014.39" width="33">
+        <path fill="#054752"
+          d="M1195.16 619.8c-31.2-184-205.8-308-390-276.8l54.4-308.3L662.96 0c-17 37-91 206-127 397 73.3 50 127 128.5 143 223 17.2 100.7-12.3 198.5-72.6 271.7 14.8 18 31.7 34.7 51 49.7 77 60.3 170.2 83.8 261 68.4 184-31.3 308-206 276.8-390z">
+        </path>
+        <path fill="#2dbeff"
+          d="M531.96 418l4-21c-69.8-47.6-157.2-69.3-247-54l54.4-308.4L146.66 0c-17.5 38.4-96.5 218.6-130.7 418-27.5 159.8-26.2 332 58.5 453 18.2 26 40.2 49.7 66.7 70.4 77 60.3 170.2 83.8 261 68.4 83.4-14 154.4-57.7 204.3-118.2-5.5-6.7-10.8-13.6-15.7-20.7-85-121.2-86-293.3-58.7-453z">
+        </path>
+        <path fill="#9ef769"
+          d="M678.96 619.8c-16-94.4-69.7-173-143-223l-4 21c-27.4 160-26 332 58.6 453 5 7.2 10.2 14 15.7 20.8 60.3-73.2 89.8-171 72.7-271.8z">
+        </path>
+      </svg>
     </a>
   </div>
   <div class="nav-item d-flex justify-content-end mt-1">
     <a class="nav-link lens" href="/trips/finder">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl eBMhlT mt-1" width="24" height="24" aria-hidden="true"><g fill="none" stroke="#00AFF5" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"><line x1="22" y1="22" x2="16.4" y2="16.4"></line><circle cx="10" cy="10" r="9"></circle></g>
+      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl eBMhlT mt-1" width="24"
+        height="24" aria-hidden="true">
+        <g fill="none" stroke="#00AFF5" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
+          stroke-miterlimit="10">
+          <line x1="22" y1="22" x2="16.4" y2="16.4"></line>
+          <circle cx="10" cy="10" r="9"></circle>
+        </g>
       </svg>
     </a>
     <a class="nav-link mr-2" href="/trips/new">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl eBMhlT mt-1" width="24" height="24" aria-hidden="true"><path stroke-width="0" fill="#00AFF5" fill-rule="evenodd" d="M1.14 11.5a10.36 10.36 0 1120.72 0 10.36 10.36 0 01-20.72 0zM11.5 0a11.5 11.5 0 100 23 11.5 11.5 0 000-23zm.57 6.53a.57.57 0 00-1.14 0v4.4h-4.4a.57.57 0 100 1.14h4.4v4.4a.57.57 0 101.14 0v-4.4h4.4a.57.57 0 000-1.14h-4.4z"></path>
+      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl eBMhlT mt-1" width="24"
+        height="24" aria-hidden="true">
+        <path stroke-width="0" fill="#00AFF5" fill-rule="evenodd"
+          d="M1.14 11.5a10.36 10.36 0 1120.72 0 10.36 10.36 0 01-20.72 0zM11.5 0a11.5 11.5 0 100 23 11.5 11.5 0 000-23zm.57 6.53a.57.57 0 00-1.14 0v4.4h-4.4a.57.57 0 100 1.14h4.4v4.4a.57.57 0 101.14 0v-4.4h4.4a.57.57 0 000-1.14h-4.4z">
+        </path>
       </svg>
     </a>
   </div>
