--- a/views/ratings/new.hbs
+++ b/views/ratings/new.hbs
@@ -1,32 +1,30 @@
-
 <div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
   <div class="col-12 col-md-4 row justify-content-center">
-     <h1 class="fs-25 mt-25">New Rate</h1>
+    <h1 class="fs-25 mt-25">New Rate</h1>
     <div class="card border-0">
       <div class="card-body">
         <form action="/users/{{userId}}/rating" method="POST">
           <div class="mb-3">
             <div class="input-group mb-3">
-                  <span class="input-group-text"><i class="fa fa-star fa-fw" aria-hidden="true"></i></span>
-                     <select type="from" name="rating" class="form-select bg-body-secondary"
-                    placeholder="Rate">
-                      <option selected>Rate</option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                    </select>
-              </div>
-              <div class="input-group mb-2">
-                  <span class="input-group-text"><i class="fa fa-commenting fa-fw" aria-hidden="true"></i></span>
-                    <textarea type="text" name="observations" class="form-control bg-body-secondary"
-                    placeholder="Comments"></textarea>
-              </div>
-                <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Rate</button>
+              <span class="input-group-text"><i class="fa fa-star fa-fw" aria-hidden="true"></i></span>
+              <select type="from" name="rating" class="form-select bg-body-secondary" placeholder="Rate">
+                <option selected>Rate</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+            </div>
+            <div class="input-group mb-2">
+              <span class="input-group-text"><i class="fa fa-commenting fa-fw" aria-hidden="true"></i></span>
+              <textarea type="text" name="observations" class="form-control bg-body-secondary"
+                placeholder="Comments"></textarea>
+            </div>
+            <button type="submit"
+              class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Rate</button>
         </form>
       </div>
     </div>
   </div>
 </div>
-
