--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,54 +1,56 @@
 {{#if errors}}
-  <div class="alert alert-danger">
-    review form data
-  </div>
+<div class="alert alert-danger">
+  review form data
+</div>
 {{/if}}
 
 
 <div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
   <div class="col-12 col-md-4 row justify-content-center">
-     <h1 class="fs-25 mt-25">Create a New User</h1>
+    <h1 class="fs-25 mt-25">Create a New User</h1>
     <div class="card border-0">
       <div class="card-body">
         <form action="/users/new" method="POST">
           <div class="mb-3">
             <div class="input-group mb-2">
-                  <span class="input-group-text"><i class="fa fa-user fa-fw" aria-hidden="true"></i></span>
-                  <input type="user" name="user" value="{{user.user}}" class="form-control bg-body-secondary {{#if errors.user}}is-invalid{{/if}}"
-                    placeholder="User">
-                    {{#if errors.user}}<div class="invalid-feedback">{{errors.user}}</div>{{/if}}
-              </div>
-              <div class="input-group mb-2">
-                  <span class="input-group-text"><i class="fa fa-id-card-o fa-fw" aria-hidden="true"></i></span>
-                  <input type="text" name="name" value="{{user.name}}" class="form-control bg-body-secondary {{#if errors.name}}is-invalid{{/if}}"
-                    placeholder="Name">
-                    {{#if errors.name}}<div class="invalid-feedback">{{errors.name}}</div>{{/if}}
-              </div>
-              <div class="input-group mb-2">
-                  <span class="input-group-text"><i class="fa fa-id-card fa-fw" aria-hidden="true"></i></span>
-                  <input type="text" name="lastName" value="{{user.lastName}}"  class="form-control bg-body-secondary {{#if errors.lastName}}is-invalid{{/if}}"
-                    placeholder="Last Name">
-                    {{#if errors.lastName}}<div class="invalid-feedback">{{errors.lastName}}</div>{{/if}}
-              </div>
-              <div class="input-group mb-2">
-                  <span class="input-group-text"><i class="fa fa-calendar fa-fw" aria-hidden="true"></i></span>
-                  <input type="date" name="birthDate" value="{{user.birthDate}}"  class="form-control bg-body-secondary {{#if errors.birthdate}}is-invalid{{/if}}"
-                    placeholder="BirthDate">
-                    {{#if errors.birthdate}}<div class="invalid-feedback">{{errors.birthdate}}</div>{{/if}}
-              </div>
-              <div class="input-group mb-2">
-                  <span class="input-group-text"><i class="fa fa-at fa-fw" aria-hidden="true"></i></span>
-                  <input type="email" name="email" value="{{user.email}}"  class="form-control bg-body-secondary {{#if errors.email}}is-invalid{{/if}}"
-                    placeholder="Email">
-                    {{#if errors.email}}<div class="invalid-feedback">{{errors.email}}</div>{{/if}}
-              </div>
-              <div class="input-group mb-2">
-                  <span class="input-group-text"><i class="fa fa-lock fa-fw" aria-hidden="true"></i></span>
-                  <input type="password" name="password" value="{{user.password}}"  class="form-control bg-body-secondary {{#if errors.password}}is-invalid{{/if}}"
-                    placeholder="Password">
-                    {{#if errors.password}}<div class="invalid-feedback">{{errors.password}}</div>{{/if}}
-              </div>
-                <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Create</button>
+              <span class="input-group-text"><i class="fa fa-user fa-fw" aria-hidden="true"></i></span>
+              <input type="user" name="user" value="{{user.user}}"
+                class="form-control bg-body-secondary {{#if errors.user}}is-invalid{{/if}}" placeholder="User">
+              {{#if errors.user}}<div class="invalid-feedback">{{errors.user}}</div>{{/if}}
+            </div>
+            <div class="input-group mb-2">
+              <span class="input-group-text"><i class="fa fa-id-card-o fa-fw" aria-hidden="true"></i></span>
+              <input type="text" name="name" value="{{user.name}}"
+                class="form-control bg-body-secondary {{#if errors.name}}is-invalid{{/if}}" placeholder="Name">
+              {{#if errors.name}}<div class="invalid-feedback">{{errors.name}}</div>{{/if}}
+            </div>
+            <div class="input-group mb-2">
+              <span class="input-group-text"><i class="fa fa-id-card fa-fw" aria-hidden="true"></i></span>
+              <input type="text" name="lastName" value="{{user.lastName}}"
+                class="form-control bg-body-secondary {{#if errors.lastName}}is-invalid{{/if}}" placeholder="Last Name">
+              {{#if errors.lastName}}<div class="invalid-feedback">{{errors.lastName}}</div>{{/if}}
+            </div>
+            <div class="input-group mb-2">
+              <span class="input-group-text"><i class="fa fa-calendar fa-fw" aria-hidden="true"></i></span>
+              <input type="date" name="birthDate" value="{{user.birthDate}}"
+                class="form-control bg-body-secondary {{#if errors.birthdate}}is-invalid{{/if}}"
+                placeholder="BirthDate">
+              {{#if errors.birthdate}}<div class="invalid-feedback">{{errors.birthdate}}</div>{{/if}}
+            </div>
+            <div class="input-group mb-2">
+              <span class="input-group-text"><i class="fa fa-at fa-fw" aria-hidden="true"></i></span>
+              <input type="email" name="email" value="{{user.email}}"
+                class="form-control bg-body-secondary {{#if errors.email}}is-invalid{{/if}}" placeholder="Email">
+              {{#if errors.email}}<div class="invalid-feedback">{{errors.email}}</div>{{/if}}
+            </div>
+            <div class="input-group mb-2">
+              <span class="input-group-text"><i class="fa fa-lock fa-fw" aria-hidden="true"></i></span>
+              <input type="password" name="password" value="{{user.password}}"
+                class="form-control bg-body-secondary {{#if errors.password}}is-invalid{{/if}}" placeholder="Password">
+              {{#if errors.password}}<div class="invalid-feedback">{{errors.password}}</div>{{/if}}
+            </div>
+            <button type="submit"
+              class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Create</button>
         </form>
       </div>
     </div>
