--- a/views/users/picture.hbs
+++ b/views/users/picture.hbs
@@ -1,15 +1,16 @@
 <div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
   <div class="col-12 col-md-4 row justify-content-center mb-5">
-     <h1 class="fs-25 mt-25">Edit Profile Picture</h1>
+    <h1 class="fs-25 mt-25">Edit Profile Picture</h1>
     <div class="card border-0">
       <div class="card-body">
         <form action="/profile/{{currentUser.id}}" method="POST" enctype="multipart/form-data">
           <div class="mb-3">
-                <label for="image" class="form-label">Profile Image</label>
-                <img id="image" class="m-2 rounded-circle" src="{{currentUser.image}}" width="200" height="200"/>
-                <input type="file" value="{{currenUser.image}}" name="image" id="image" class="form-control">
-              </div>
-                <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Update</button>
+            <label for="image" class="form-label">Profile Image</label>
+            <img id="image" class="m-2 rounded-circle" src="{{currentUser.image}}" width="200" height="200" />
+            <input type="file" value="{{currenUser.image}}" name="image" id="image" class="form-control">
+          </div>
+          <button type="submit"
+            class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Update</button>
         </form>
       </div>
     </div>
