Errors Css & Clean code

--- a/views/errors/404.hbs
+++ b/views/errors/404.hbs
@@ -150,4 +150,10 @@
   </defs>
 </svg>
 
-<h1> Slight problem... This page doesn't exist.</h1>
+<div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
+  <div class="col-12 col-md-4 row justify-content-center">
+    <h1 class="text-center"> Slight problem... This page doesn't exist.</h1>
+    <a class="publish btn btn-primary rounded-pill text-white mt-3 border-0 fw-normal" href="/">Go to the homepage</a>
+  <div>
+</div>
+
