--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -134,7 +134,7 @@
   </div>
   <div class="anchors d-flex align-items-start flex-column ms-1">
     <div class="mb-4">
-      <a class="signUp text-decoration-none" href="/photo">Edit travel preferences</a>
+      <a class="signUp text-decoration-none disabled" href="#">Edit travel preferences</a>
     </div>
   </div>
 </div>
