--- a/views/trips/book.hbs
+++ b/views/trips/book.hbs
@@ -1,17 +1,42 @@
-<h1>Check details and book!</h1>
-
-<div class="card border-0" style="width: 100%;">
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item border-0">{{trip.date}} -- {{trip.departureTime}}</li>
-    <li class="list-group-item border-0">{{trip.from}}</li>
-    <li class="list-group-item">{{trip.to}}</li>
-    <li class="list-group-item  border-top border-5">Total Price: {{trip.price}}.00€</li>
-  </ul>
+<div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
+  <div class="col-12 col-md-4 row justify-content-center">
+    <h1 class="text-start mb-5 mt-3">Check details and book!</h1>
+    <h3 class="list-group-item ms-4 border-0 mb-3">{{trip.date}} at {{trip.departureTime}}</h3>
+    <div class="d-flex flex-row">
+      <div class="travel-icon ms-2 me-2">
+        <div class="travel-icon-circle"></div>
+        <div class="travel-icon-line"></div>
+        <div class="travel-icon-circle"></div>
+      </div>
+      <div>
+        <h6 class="card-subtitle text-muted">{{trip.from}}</h6>
+        <div class="mb-4">
+        </div>
+        <h6 class="card-subtitle text-muted  pt-2 mb-3">{{trip.to}}</h6>
+        <div class="mb-1">
+        </div>
+      </div>
+    </div>
+    <div>
+    </div>
+  </div>
 </div>
+  
 
 
-
-<form action="/trips/{{trip.id}}/book" method="POST">
-  <button type="submit" class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal">Pay
-    {{trip.price}}.00€</button>
-</form>
+<div class="text-secondary text-decoration-none" href="users/{{chat.id}}/chat">
+  <div class="mb-3 d-flex align-items-center flex-column mb-4 border-top">
+    <div class="d-flex justify-content-between mb-4" style="width: 80%;">
+      <div>
+        <h3 class="pl-20 fw-bold mt-4 text-dark">Total Price</h3>
+        <p>For passanger</p>
+      </div>
+      <div class="mt-4">
+        <p class="fs-3">{{trip.price}}.00€</p>
+      </div>
+    </div>
+    <form action="/trips/{{trip.id}}/book" method="POST" class="align-items-center">
+      <button type="submit" class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal">Pay
+        {{trip.price}}.00€</button>
+  </div>
+</div>
