--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -32,9 +32,9 @@
             </div>
             <div class="input-group mb-2">
               <span class="input-group-text"><i class="fa fa-calendar fa-fw" aria-hidden="true"></i></span>
-              <input type="date" name="birthDate" value="{{user.birthDate}}"
+              <input type="date" name="birthdate" value="{{user.birthdate}}"
                 class="form-control bg-body-secondary {{#if errors.birthdate}}is-invalid{{/if}}"
-                placeholder="BirthDate">
+                placeholder="Birthdate">
               {{#if errors.birthdate}}<div class="invalid-feedback">{{errors.birthdate}}</div>{{/if}}
             </div>
             <div class="input-group mb-2">
