--- a/views/trips/new.hbs
+++ b/views/trips/new.hbs
@@ -21,7 +21,7 @@
             </div>
             <input type="hidden" name="latFrom" id="latFrom" value="{{trip.latFrom}}">
             <input type="hidden" name="lngFrom" id="lngFrom" value="{{trip.lngFrom}}">
-            <input type="hidden" name="g-imageFrom" id="g-imageFrom" value="{{currentUser.image}}">
+            <input type="hidden" name="g-imageFrom" id="g-imageFrom" value="{{#if currentUser.image}} {{currentUser.image}} {{else}} https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg {{/if}}">
 
             <div class="row my-3">
               <div class="col-12">
@@ -39,7 +39,7 @@
             </div>
             <input type="hidden" name="latTo" id="latTo" value="{{trip.latTo}}">
             <input type="hidden" name="lngTo" id="lngTo" value="{{trip.lngTo}}">
-            <input type="hidden" name="g-imageTo" id="g-imageTo" value="{{currentUser.image}}">
+            <input type="hidden" name="g-imageTo" id="g-imageTo" value="{{#if currentUser.image}} {{currentUser.image}} {{else}} https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg {{/if}}">
 
             <div class="row my-3">
               <div class="col-12">
