Moment Library for format the date

--- a/views/trips/book.hbs
+++ b/views/trips/book.hbs
@@ -1,7 +1,7 @@
 <div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
   <div class="col-12 col-md-4 row justify-content-center">
     <h1 class="text-start mb-5 mt-3">Check details and book!</h1>
-    <h3 class="list-group-item ms-4 border-0 mb-3">{{trip.date}} at {{trip.departureTime}}</h3>
+    <h3 class="list-group-item ms-4 border-0 mb-3">{{formatDate trip.date}} at {{trip.departureTime}}</h3>
     <div class="d-flex flex-row">
       <div class="travel-icon ms-2 me-2">
         <div class="travel-icon-circle"></div>
